Name:                jark
Version:             0.4
Description:         jark-nREPL client
License:             GPL
Build-Type:          Simple
Cabal-Version:       >=1.2
Executable jark
  Main-is:           jark.hs
  Extensions:        MultiParamTypeClasses
  Build-Depends:     
                     base, 
                     haskell98,
                     parsec,
                     containers,
                     mtl,
                     readline,
                     Shellac >= 0.9,
                     Shellac-readline,
                     network,
                     curl
